--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -499,3 +499,5 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <router-outlet></router-outlet>
+
+<app-hola-mundo></app-hola-mundo>
